<resources>
    <string name="app_name">ExpenseX</string>
    <string name="welcome">Welcome!</string>
    <string name="expensesX">ExpenseX helps you save money</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="hello_there">Hello There!</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email_icon">email icon</string>
    <string name="password_icon">password icon</string>
    <string name="username_icon">username icon</string>
    <string name="back_icon">back icon</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="march_2020">March 2020</string>
    <string name="income">INCOME</string>
    <string name="rm_2000">RM 2000</string>
    <string name="balance">BALANCE</string>
    <string name="rm_1000">RM 1000</string>
    <string name="expense">EXPENSE</string>
    <string name="dropdown_icon">dropdown icon</string>
    <string name="app_bar_background">app bar background</string>
    <string name="left_arrow">left arrow</string>
    <string name="right_arrow">right arrow</string>
    <string name="jan">JAN</string>
    <string name="feb">FEB</string>
    <string name="mar">MAR</string>
    <string name="apr">APR</string>
    <string name="may">MAY</string>
    <string name="jun">JUN</string>
    <string name="jul">JUL</string>
    <string name="aug">AUG</string>
    <string name="sep">SEP</string>
    <string name="oct">OCT</string>
    <string name="nov">NOV</string>
    <string name="dec">DEC</string>
</resources>
