<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#C0000000"
    tools:context=".TransFragment">

    <ImageView
        android:id="@+id/background"
        android:layout_width="411dp"
        android:layout_height="150dp"
        android:background="@color/white"
        android:contentDescription="@string/app_bar_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/yearTextView"
        android:layout_width="136dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text=""
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/rightBtn"
        app:layout_constraintStart_toEndOf="@+id/leftBtn"
        app:layout_constraintTop_toTopOf="@+id/background" />

    <Button
        android:id="@+id/leftBtn"
        android:layout_width="135dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:alpha="0"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/background" />

    <Button
        android:id="@+id/rightBtn"
        android:layout_width="136dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:alpha="0"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/background" />

    <ImageView
        android:id="@+id/leftArrow"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/left_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/leftBtn"
        app:srcCompat="@drawable/ic_chevron_left" />

    <ImageView
        android:id="@+id/rightArrow"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/right_arrow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rightBtn"
        app:srcCompat="@drawable/ic_chevron_right" />

    <ToggleButton
        android:id="@+id/toggleButton1"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:background="@drawable/month_background"
        android:textOff="@string/jan"
        android:textOn="@string/jan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yearTextView"/>

    <ToggleButton
        android:id="@+id/toggleButton2"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:background="@drawable/month_background"
        android:textOff="@string/feb"
        android:textOn="@string/feb"
        app:layout_constraintEnd_toStartOf="@+id/toggleButton3"
        app:layout_constraintStart_toEndOf="@+id/toggleButton1"
        app:layout_constraintTop_toBottomOf="@+id/yearTextView"/>

    <ToggleButton
        android:id="@+id/toggleButton3"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:background="@drawable/month_background"
        android:textOff="@string/mar"
        android:textOn="@string/mar"
        app:layout_constraintEnd_toStartOf="@+id/toggleButton4"
        app:layout_constraintStart_toEndOf="@+id/toggleButton2"
        app:layout_constraintTop_toBottomOf="@+id/yearTextView"/>

    <ToggleButton
        android:id="@+id/toggleButton4"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginLeft="19dp"
        android:background="@drawable/month_background"
        android:textOff="@string/apr"
        android:textOn="@string/apr"
        app:layout_constraintEnd_toStartOf="@+id/toggleButton5"
        app:layout_constraintStart_toEndOf="@+id/toggleButton3"
        app:layout_constraintTop_toBottomOf="@+id/yearTextView"/>

    <ToggleButton
        android:id="@+id/toggleButton5"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:background="@drawable/month_background"
        android:textOff="@string/may"
        android:textOn="@string/may"
        app:layout_constraintEnd_toStartOf="@+id/toggleButton6"
        app:layout_constraintStart_toEndOf="@+id/toggleButton4"
        app:layout_constraintTop_toBottomOf="@+id/yearTextView"/>

    <ToggleButton
        android:id="@+id/toggleButton6"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/month_background"
        android:textOff="@string/jun"
        android:textOn="@string/jun"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/toggleButton5"
        app:layout_constraintTop_toBottomOf="@+id/yearTextView"/>

    <ToggleButton
        android:id="@+id/toggleButton7"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:background="@drawable/month_background"
        android:textOff="@string/jul"
        android:textOn="@string/jul"
        app:layout_constraintEnd_toEndOf="@+id/toggleButton1"
        app:layout_constraintStart_toStartOf="@+id/toggleButton1"
        app:layout_constraintTop_toBottomOf="@+id/toggleButton1"/>

    <ToggleButton
        android:id="@+id/toggleButton8"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:background="@drawable/month_background"
        android:textOff="@string/aug"
        android:textOn="@string/aug"
        app:layout_constraintEnd_toEndOf="@+id/toggleButton2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/toggleButton2"
        app:layout_constraintTop_toBottomOf="@+id/toggleButton2"/>

    <ToggleButton
        android:id="@+id/toggleButton9"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:background="@drawable/month_background"
        android:textOff="@string/sep"
        android:textOn="@string/sep"
        app:layout_constraintEnd_toEndOf="@+id/toggleButton3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/toggleButton3"
        app:layout_constraintTop_toBottomOf="@+id/toggleButton3"/>

    <ToggleButton
        android:id="@+id/toggleButton10"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:background="@drawable/month_background"
        android:textOff="@string/oct"
        android:textOn="@string/oct"
        app:layout_constraintEnd_toEndOf="@+id/toggleButton4"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/toggleButton4"
        app:layout_constraintTop_toBottomOf="@+id/toggleButton4"/>

    <ToggleButton
        android:id="@+id/toggleButton11"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:background="@drawable/month_background"
        android:textOff="@string/nov"
        android:textOn="@string/nov"
        app:layout_constraintEnd_toEndOf="@+id/toggleButton5"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/toggleButton5"
        app:layout_constraintTop_toBottomOf="@+id/toggleButton5"/>


    <ToggleButton
        android:id="@+id/toggleButton12"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:background="@drawable/month_background"
        android:textOff="@string/dec"
        android:textOn="@string/dec"
        app:layout_constraintEnd_toEndOf="@+id/toggleButton6"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/toggleButton6"
        app:layout_constraintTop_toBottomOf="@+id/toggleButton6"/>

</androidx.constraintlayout.widget.ConstraintLayout>