<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TransFragment">

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/regular"
        android:foregroundGravity="center_vertical|center_horizontal"
        android:gravity="center"
        android:text="@string/march_2020"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/incomeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/bold"
        android:text="@string/income"
        android:textColor="@color/white"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date" />

    <TextView
        android:id="@+id/incomeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/bold"
        android:text="@string/rm_2000"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/incomeLabel"
        app:layout_constraintStart_toStartOf="@+id/incomeLabel"
        app:layout_constraintTop_toBottomOf="@+id/incomeLabel" />

    <TextView
        android:id="@+id/balanceLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/bold"
        android:text="@string/balance"
        android:textColor="@color/white"
        android:textSize="13sp"
        app:layout_constraintEnd_toStartOf="@+id/expenseLabel"
        app:layout_constraintStart_toEndOf="@+id/incomeLabel"
        app:layout_constraintTop_toBottomOf="@+id/date" />

    <TextView
        android:id="@+id/balanceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/bold"
        android:text="@string/rm_1000"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/balanceLabel"
        app:layout_constraintStart_toStartOf="@+id/balanceLabel"
        app:layout_constraintTop_toBottomOf="@+id/balanceLabel" />

    <TextView
        android:id="@+id/expenseLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:fontFamily="@font/bold"
        android:text="@string/expense"
        android:textColor="@color/white"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date" />

    <TextView
        android:id="@+id/expenseTextVIew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/bold"
        android:text="@string/rm_1000"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/expenseLabel"
        app:layout_constraintStart_toStartOf="@+id/expenseLabel"
        app:layout_constraintTop_toBottomOf="@+id/expenseLabel" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:contentDescription="@string/dropdown_icon"
        app:layout_constraintBottom_toBottomOf="@+id/date"
        app:layout_constraintStart_toEndOf="@+id/date"
        app:layout_constraintTop_toTopOf="@+id/date"
        app:srcCompat="@drawable/ic_arrow_drop_down" />

</androidx.constraintlayout.widget.ConstraintLayout>