<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    tools:context=".SignIn">

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:fontFamily="@font/bold"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.175"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.185" />

    <TextView
        android:id="@+id/welcomeText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:alpha="0.5"
        android:fontFamily="@font/light"
        android:text="@string/expensesX"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.224"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeText" />

    <EditText
        android:id="@+id/emailSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:alpha="0.5"
        android:ems="10"
        android:fontFamily="@font/light"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:singleLine="false"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeText2"
        android:importantForAutofill="no" />

    <ImageView
        android:id="@+id/emailIcon"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="16dp"
        android:alpha="0.5"
        android:contentDescription="@string/email_icon"
        app:layout_constraintBottom_toBottomOf="@+id/emailSignIn"
        app:layout_constraintEnd_toEndOf="@+id/emailSignIn"
        app:srcCompat="@drawable/ic_email" />

    <EditText
        android:id="@+id/passwordSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:alpha="0.5"
        android:ems="10"
        android:fontFamily="@font/light"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailSignIn"
        android:importantForAutofill="no" />

    <ImageView
        android:id="@+id/passwordIcon"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="16dp"
        android:alpha="0.5"
        android:contentDescription="@string/password_icon"
        app:layout_constraintBottom_toBottomOf="@+id/passwordSignIn"
        app:layout_constraintEnd_toEndOf="@+id/passwordSignIn"
        app:srcCompat="@drawable/ic_lock" />

    <Button
        android:id="@+id/signUpBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:alpha="0.5"
        android:background="@drawable/login_btn_selector"
        android:fontFamily="@font/light"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/passwordSignIn"
        app:layout_constraintTop_toBottomOf="@+id/passwordSignIn"
        android:onClick="OnSignUpClicked"/>

    <Button
        android:id="@+id/signInBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:alpha="0.5"
        android:background="@drawable/login_btn_selector"
        android:fontFamily="@font/light"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/passwordSignIn"
        app:layout_constraintTop_toBottomOf="@+id/passwordSignIn"
        android:onClick="OnSignInClicked"/>

</androidx.constraintlayout.widget.ConstraintLayout>