<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp"
    android:background="@drawable/background1">

    <TextView
        android:id="@+id/helloThereText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:fontFamily="@font/bold"
        android:text="@string/hello_there"
        android:textColor="@color/white"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.183"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.259"
        android:layout_marginStart="32dp" />

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:alpha="0.5"
        android:ems="10"
        android:fontFamily="@font/light"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/helloThereText"
        android:importantForAutofill="no" />

    <ImageView
        android:id="@+id/usernameIcon"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="16dp"
        android:alpha="0.5"
        android:contentDescription="@string/username_icon"
        app:layout_constraintBottom_toBottomOf="@+id/usernameEditText"
        app:layout_constraintEnd_toEndOf="@+id/usernameEditText"
        app:srcCompat="@drawable/ic_person" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:alpha="0.5"
        android:ems="10"
        android:fontFamily="@font/light"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:singleLine="false"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameEditText"
        android:importantForAutofill="no" />

    <ImageView
        android:id="@+id/emailIcon"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="16dp"
        android:alpha="0.5"
        android:contentDescription="@string/email_icon"
        app:layout_constraintBottom_toBottomOf="@+id/emailEditText"
        app:layout_constraintEnd_toEndOf="@+id/emailEditText"
        app:srcCompat="@drawable/ic_email" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:alpha="0.5"
        android:ems="10"
        android:fontFamily="@font/light"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText"
        android:importantForAutofill="no" />

    <ImageView
        android:id="@+id/passwordIcon"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="16dp"
        android:alpha="0.5"
        android:contentDescription="@string/password_icon"
        app:layout_constraintBottom_toBottomOf="@+id/passwordEditText"
        app:layout_constraintEnd_toEndOf="@+id/passwordEditText"
        app:srcCompat="@drawable/ic_lock" />

    <EditText
        android:id="@+id/confirmEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:alpha="0.5"
        android:ems="10"
        android:fontFamily="@font/light"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
        android:importantForAutofill="no" />

    <ImageView
        android:id="@+id/confirmPwdIcon"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="16dp"
        android:alpha="0.5"
        android:contentDescription="@string/password_icon"
        app:layout_constraintBottom_toBottomOf="@+id/confirmEditText"
        app:layout_constraintEnd_toEndOf="@+id/confirmEditText"
        app:srcCompat="@drawable/ic_lock" />

    <Button
        android:id="@+id/signUpBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:alpha="0.5"
        android:background="@drawable/login_btn_selector"
        android:fontFamily="@font/light"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/confirmPwdIcon"
        app:layout_constraintStart_toStartOf="@+id/confirmEditText"
        app:layout_constraintTop_toBottomOf="@+id/confirmEditText"
        android:onClick="OnSignUpClicked"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/back_icon"
        android:onClick="onBackBtnClicked"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow" />

</androidx.constraintlayout.widget.ConstraintLayout>